--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 body {
-    font-family: 'Poppins'
-}
-', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: #fffafc;
     padding-top: 60px;
   }
